@@ -1,3 +1,4 @@
+Fixed: if a slice is moving toward the pie when the user presses "down" on the numerator, it should turn around and head back to the bucket
 Changed from IntClientProperty back to IntegerProperty
 Fixed a bug in PieSet.toContainerState
 Generalized interfaces to SettableProperty and IntClientProperty
